# Repentogon-Discord-Rich-Presence

./: .gitignore  CMakeLists.txt  LICENSE  README.md  docs.md
src/: ConfigHandler.cpp  ConfigHandler.h  DiscordAPI.cpp  DiscordAPI.h  GameInfoStrings.h  IsaacDiscord.cpp  LuaHandler.cpp  PlayerStrings.cpp  StageStrings.cpp  dllmain.cpp
src/api/: LuaActivity.cpp  LuaActivity.h  LuaGlobals.cpp  LuaTimestamp.cpp  LuaTimestamp.h
src/lib/: mINI.h
src/scripts/: Enums.lua  ImGuiHandler.lua
